# GfxLab

./: CMakeLists.txt  test.json
configs/: lighting.json  nolight.json  postprocessing.json
models/: cube.mtl  square.mtl
models/cornell-box/: CornellBox-Original.mtl
shaders/: display_normal.gs  display_normal.vs  inversion.fs  inversion.vs  lighting.fs  lighting.vs  lightmap.fs  lightmap.vs  passthrough.fs  passthrough.vs  solidcolor.vs
src/: camera.cpp  camera.h  common.h  geometry.h  jsonparser.cpp  jsonparser.h  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  program.h  renderer.cpp  renderer.h  rendererfactory.cpp  rendererfactory.h  renderpass.cpp  renderpass.h  renderstatecallbacks.h  resourcemanager.cpp  resourcemanager.h  scene.h  window.cpp  window.h
statecallbacks/: init.cpp
statecallbacks/lighting/: CMakeLists.txt  init.cpp  lighting_statecbs.cpp
statecallbacks/nolight/: CMakeLists.txt  nolight_statecbs.cpp  statecbs.def
statecallbacks/postprocessing/: CMakeLists.txt  postprocessing_statecbs.cpp
statecbs/: CMakeLists.txt  statecbs.cpp  statecbs.def
